update gitignore and add Concurrently to package

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "hbs": "~4.0.1",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "concurrently": "^3.4.0"
   }
 }
