--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,10 @@
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "react-redux": "^5.0.4",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-form": "^6.6.3"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
