--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "dev": "concurrently \"env PORT=3001 nodemon ./bin/www\" \"npm run client\""
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "email-validator": "^1.0.7",
     "express": "~4.15.2",
     "express-session": "^1.15.2",
     "hbs": "~4.0.1",
     "morgan": "~1.8.1",
+    "owasp-password-strength-test": "^1.3.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^6.1.5",
