--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "build": "cd client && npm run build && cd .. && cp -r ./client/build/* ./public",
     "client": "cd client && npm start",
     "dev": "concurrently \"env PORT=3001 nodemon ./bin/www\" \"npm run client\""
   },
