--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
+    "react-body-classname": "^1.1.1",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
